commit for save

--- a/client/src/components/S01-Us02-SearchBar.module.css
+++ b/client/src/components/S01-Us02-SearchBar.module.css
@@ -1,14 +1,52 @@
 .researchBar{
-    margin: 15px;
-    height: 30px;
-    width: 250px;
-    border-radius: 10px;
-    background-color: transparent;
-    color: aliceblue;
+    margin-left: 5%;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    height: 40px;
+    width: 75%;
+    border-radius: 15px;
+    background-color: #3b0fbf;
+    color: white;
+    border : solid white;
+    font-size: 18px;
+    text-align:auto;
+    padding: 0 15px;
 }
 
-.resultList {
-    
-   margin-left: 15px;
+.listContainer{
+    margin-left: 5%;
+    padding: 10px 15px;
+    background-color: #a88bfe;
+    border-radius: 15px;
+    height: 100px;
+    width: 75%;
+}
+
+.resultList{
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+}
+
+.mainSearchMenu ul {
    list-style: none;
 }
+
+.mainSearchMenu li{
+    margin-left: 20px;
+}
+
+.mainSearchMenu li:hover{
+    background-color: #7c62cc;
+}
+
+.resultList::-webkit-scrollbar {
+    width: 5px;
+}
+
+.resultList::-webkit-scrollbar-thumb{
+    background-color: #706f6f;
+    outline: 2px solid #706f6f;
+    border-radius: 10px;
+}
+  
