--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,24 +2,24 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "jaldi", sans-serif;
 }
 
 body {
-  font-family: "Lato", sans-serif;
   font-size: 16px;
   line-height: 1.7;
   color: #eee;
   margin: 0;
-  
 }
 
 #root {
-  background: #5C39C4;
-  background: radial-gradient(circle,rgba(92, 57, 196, 1) 0%, rgba(28, 7, 89, 1) 100%);
+  background: #5c39c4;
+  background: radial-gradient(
+    circle,
+    rgba(92, 57, 196, 1) 0%,
+    rgba(28, 7, 89, 1) 100%
+  );
   height: 100vh;
   background-size: cover;
   background-position: top;
 }
-
-
-
