--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,5 +4,11 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  background: radial-gradient(circle, #5C39C4 0%, #1C0759 100%);
+}
+
 
 
