--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -22,7 +21,7 @@ body,
     rgba(92, 57, 196, 1) 0%,
     rgba(28, 7, 89, 1) 100%
   );
-  height: 100vh;
+  height: 100svh;
   background-size: cover;
   background-position: top;
 }
