Corrected header, about

--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -1,8 +1,14 @@
 .title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Karantina', cursive;
-    letter-spacing: 5px;
-    font-size: 2.5rem;
+  position: fixed;    
+  top: 0;            
+  left: 50%;          
+  transform: translateX(-50%); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Karantina', cursive;
+  letter-spacing: 5px;
+  font-size: 2.5rem;
+  z-index: 1000;      
 }
+
