--- a/client/src/pages/About.module.css
+++ b/client/src/pages/About.module.css
@@ -1,20 +1,26 @@
 .aboutContainer {
+  position: fixed;
+  top: 5rem;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  min-height: 100svh;
+  justify-content: flex-start;
   width: 100%;
+  height: calc(100vh - 5rem);
   padding: 2rem;
   text-align: center;
   color: #fff;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   line-height: 1.6;
+  overflow-y: auto;
+  box-sizing: border-box;
 }
 
 .section {
   width: 100%;
-  margin-bottom: 2.5rem;
+  margin-bottom: 0;
 }
 
 .section:not(:first-of-type) {
@@ -56,7 +62,7 @@
   font-family: 'Jaldi', sans-serif;
   font-size: 1rem;
   color: white;
-  margin: 0 0 1rem;
+  margin: 0rem;
 }
 
 @media screen and (max-width: 768px) {
