--- a/client/src/components/IframePlayer.module.css
+++ b/client/src/components/IframePlayer.module.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 70%;
+  width: 100%;
   height: 100%;
   text-align: center;
 }
@@ -18,5 +18,10 @@ iframe {
 @media (max-width: 1000px) {
   .playerFrame {
     left: 50%;
+  }
+}
+@media (min-widht: 1000px) {
+  iframe {
+    width: 100%;
   }
 }
