--- a/client/src/pages/About.module.css
+++ b/client/src/pages/About.module.css
@@ -30,6 +30,14 @@
   align-items: center;
 }
 
+.section a {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .section:not(:first-of-type) {
   max-width: 40rem;
   margin: 0 auto;
