--- a/client/src/pages/About.module.css
+++ b/client/src/pages/About.module.css
@@ -30,9 +30,22 @@
   align-items: center;
 }
 
-.section a {
-  color: white;
-  text-decoration: none;
+.github{
+   display:  flex;
+   align-items: center;
+   justify-content: center;  
+}
+
+.githubContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.github img {
+  height: 7rem;
+   border: 2px solid white;
+   border-radius: 4rem;
 }
 
 .section:not(:first-of-type) {
@@ -85,5 +98,9 @@
 
   .section:not(:first-of-type) {
     max-width: 90%;
+  }
+  
+  .github img {
+    height: 5rem;
   }
 }
