Corrected color input

--- a/client/src/pages/Contact.module.css
+++ b/client/src/pages/Contact.module.css
@@ -60,6 +60,14 @@ input, textarea {
     font-size: 1rem;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+}
+input[autocompleted] {
+    background-color: transparent !important;
+}
+
 .buttonContact {
     border: 0.1rem solid black;
     border-radius: 0.2rem;
